--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,16 @@
 
 body {
   box-sizing: border-box;
-  min-height: 100vh;
   margin: 0;
   padding: 0;
   font-family: "Libre Franklin", sans-serif;
   user-select: none;
+}
+
+#root {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
